Portfolio ready for deploy - 100% complete

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,7 @@
+// jsconfig.json (در کنار package.json)
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
