--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.0.1",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
